# super_lazygit_rust

./: .gitignore  .golangci.yml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PAINPOINT.md  PLAN.md  README.md  VISION.md  checklist-port.txt  checklist_ui.txt  flake.nix  go.mod  grove.toml  install.sh  justfile  main.go  port-checklist.txt  slg
crates/app/: Cargo.toml
crates/app/src/: app.rs  async_handler.rs  common.rs  constants.rs  dummies.rs  entry_point.rs  env.rs  i18n.rs  main.rs  recent_repos_panel.rs  runtime.rs  status_manager.rs  tasks_adapter.rs  terminal.rs  test_mode.rs  watcher.rs
crates/app/src/app/: errors.rs
crates/app/src/cheatsheet/: generate.rs  mod.rs
crates/app/src/context/: base_context.rs  branches_context.rs  commit_files_context.rs  confirmation_context.rs  filtered_list_view_model.rs  history_trait.rs  list_context_trait.rs  list_view_model.rs  local_commits_context.rs  menu_context.rs  merge_conflicts_context.rs  mod.rs  patch_explorer_context.rs  reflog_commits_context.rs  remote_branches_context.rs  remotes_context.rs  search_trait.rs  setup.rs  simple_context.rs  stash_context.rs  sub_commits_context.rs  submodules_context.rs  suggestions_context.rs  worktrees_context.rs
crates/app/src/controllers/: bisect_controller.rs  branches_controller.rs  command_log_controller.rs  commit_description_controller.rs  commit_message_controller.rs  commits_files_controller.rs  common.rs  confirmation_controller.rs  context_lines_controller.rs  custom_patch_options_menu_action.rs  diffing_menu_action.rs  files_controller.rs  filter_controller.rs  filtering_menu_action.rs  git_flow_controller.rs  global_controller.rs  jump_to_side_window_controller.rs  local_commits_controller.rs  main_view_controller.rs  menu_controller.rs  merge_conflicts_controller.rs  mod.rs  options_menu_action.rs  patch_building_controller.rs  patch_explorer_controller.rs  prompt_controller.rs  quit_actions.rs  reflog_commits_controller.rs  remote_branches_controller.rs  remotes_controller.rs  rename_similarity_threshold_controller.rs  screen_mode_actions.rs  search_controller.rs  search_prompt_controller.rs  shell_command_action.rs  side_window_controller.rs  snake_controller.rs  staging_controller.rs  stash_controller.rs  status_controller.rs  (+14 more)
crates/app/src/daemon/: mod.rs  rebase.rs
crates/app/src/fakes/: log.rs
crates/app/src/filetree/: build_tree.rs  collapsed_paths.rs  commit_file_node.rs  commit_file_tree.rs  commit_file_tree_view_model.rs  file_filter.rs  file_node.rs  file_tree.rs  file_tree_view_model.rs  mod.rs  node.rs
crates/app/src/gui/: background.rs  command_log_panel.rs  controllers.rs  dummies.rs  editors.rs  extras_panel.rs  global_handlers.rs  gui.rs  gui_common.rs  gui_driver.rs  keybindings.rs  main_panels.rs  menu_panel.rs  mod.rs
crates/app/src/jsonschema/: generator.rs
crates/app/src/logs/: logs.rs  mod.rs
crates/app/src/mergeconflicts/: find_conflicts.rs  merge_conflict.rs  mod.rs  rendering.rs  state.rs
crates/app/src/modes/: mod.rs
crates/app/src/oscommands/: cmd_obj.rs  cmd_obj_runner.rs  git_cmd_obj_builder.rs  git_cmd_obj_runner.rs  mod.rs  traits.rs
crates/app/src/patch_exploring/: focus.rs  state.rs
crates/app/src/popup/: mod.rs  popup_handler.rs
crates/app/src/presentation/: branches.rs  commits.rs  files.rs  item_operations.rs  loader.rs  mod.rs  reflog_commits.rs  remote_branches.rs  remotes.rs  stash_entries.rs  status.rs  submodules.rs  suggestions.rs  tags.rs  worktrees.rs
crates/app/src/pty/: pty.rs
crates/app/src/services/: mod.rs
crates/app/src/snake/: mod.rs  snake.rs
crates/app/src/style/: basic_styles.rs  color.rs  decoration.rs  gocui.rs  hyperlink.rs  mod.rs  style.rs  text_style.rs  theme.rs
crates/app/src/types/: common.rs  common_commands.rs  context.rs  keybindings.rs  mod.rs  modes.rs  ref_range.rs  refresh.rs  rendering.rs  search_state.rs  suggestion.rs  views.rs
crates/app/src/updates/: updates.rs
crates/app/src/utils/: color.rs  copy.rs  date.rs  errors.rs  formatting.rs  gui_io.rs  io.rs  keynames.rs  lines.rs  mod.rs  once_writer.rs  rebase_todo.rs  regexp.rs  search.rs  slice.rs  string_pool.rs  string_stack.rs  template.rs  thread_safe_map.rs  utils.rs  yaml_utils.rs
crates/git/: Cargo.toml
crates/git/src/: bisect.rs  bisect_info.rs  blame.rs  branch.rs  branch_commands.rs  branch_loader.rs  cached_git_config.rs  commit.rs  commit_file_loader.rs  commit_loader.rs  commit_loading_shared.rs  common.rs  config.rs  custom.rs  diff.rs  file.rs  file_loader.rs  flow.rs  get_key.rs  git_context.rs  graph.rs  lib.rs  main_branches.rs  menu_generator.rs  patch.rs  rebase.rs  reflog_commit_loader.rs  remote.rs  remote_loader.rs  stash.rs  stash_loader.rs  status.rs  submodule.rs  sync.rs  tag.rs  tag_loader.rs  types.rs  version.rs  working_tree.rs  worktree.rs  (+1 more)
crates/test-support/: Cargo.toml
crates/test-support/src/: env.rs  integration_test.rs  lib.rs  matcher.rs  paths.rs  shell.rs  text_matcher.rs
crates/test-support/src/integration_tests/: mod.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  list_renderer.rs
crates/tui/src/presentation/: authors.rs  branches.rs  commits.rs  (+13 more)
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
(+1377 files in other folders)
