[workspace]
members = [
  "crates/app",
  "crates/core",
  "crates/tui",
  "crates/git",
  "crates/workspace",
  "crates/config",
  "crates/test-support",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Quang Dang"]
repository = "https://github.com/quangdang/super_lazygit_rust"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
thiserror = "2.0"
