[package]
name = "super-lazygit-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
default-run = "super-lazygit"

[[bin]]
name = "slg"
path = "src/main.rs"

[[bin]]
name = "super-lazygit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
super-lazygit-config = { path = "../config" }
super-lazygit-core = { path = "../core" }
super-lazygit-git = { path = "../git" }
super-lazygit-tui = { path = "../tui" }
super-lazygit-workspace = { path = "../workspace" }
tempfile.workspace = true

[dev-dependencies]
serde_json.workspace = true
super-lazygit-test-support = { path = "../test-support" }
