[package]
name = "super-lazygit-app"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
default-run = "super-lazygit"

[[bin]]
name = "slg"
path = "src/main.rs"

[[bin]]
name = "super-lazygit"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
fuzzy-matcher = "0.3"
ratatui.workspace = true
regex.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
unicode-segmentation = "1.11"
unicode-width = "0.2"
super-lazygit-config = { path = "../config" }
super-lazygit-core = { path = "../core" }
super-lazygit-git = { path = "../git" }
super-lazygit-tui = { path = "../tui" }
super-lazygit-workspace = { path = "../workspace" }
tempfile.workspace = true

[dev-dependencies]
serde_json.workspace = true
super-lazygit-test-support = { path = "../test-support" }
