[package]
name = "super-lazygit-test-support"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
super-lazygit-config = { path = "../config" }
super-lazygit-core = { path = "../core" }
super-lazygit-git = { path = "../git" }
super-lazygit-workspace = { path = "../workspace" }
tempfile.workspace = true
