[package]
name = "super-lazygit-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
crossterm.workspace = true
ratatui.workspace = true
super-lazygit-config = { path = "../config" }
super-lazygit-core = { path = "../core" }
super-lazygit-git = { path = "../git" }
super-lazygit-workspace = { path = "../workspace" }
