[package]
name = "super-lazygit-workspace"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
super-lazygit-core = { path = "../core" }
super-lazygit-git = { path = "../git" }

[dev-dependencies]
tempfile.workspace = true
